--- a/time-series-FA/s01-introdução.ipynb
+++ b/time-series-FA/s01-introdução.ipynb
@@ -19,7 +19,12 @@
     "###### - Tendencia -> aumento ou redução a longo prazo\n",
     "###### - Sazonalidade -> padrões que ocorrem em intervalos fixos\n",
     "###### - Ciclo -> aumento ou redução de frequencia sem intervalos fixos\n",
-    "###### - Erro(restante) -> o que não é explicado matematicamente quando é feita a decomposição da serie temporal\n"
+    "###### - Erro(restante) -> o que não é explicado matematicamente quando é feita a decomposição da serie temporal\n",
+    "\n",
+    "#####  * Autocorrelação\n",
+    "###### Mede se existe uma relação matemática entre os intervalos da série temporal, tambem deve estar entre -1 e 1, sendo zero a ausência de autocorrelação\n",
+    "\n",
+    "###### Medida de intervalo(lag): de 1 intervalo -> mede como valores de 1 periodo distantes estão relacionados, de 2 intervalos -> mede como valores de 2 periodos distantes estão relacionados"
    ]
   },
   {
