--- a/time-series-one/04-principios-previsão-series.ipynb
+++ b/time-series-one/04-principios-previsão-series.ipynb
@@ -8,13 +8,13 @@
    "source": [
     "# importações necessaria\n",
     "\n",
-    "from datetime import datetime\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.api import ExponentialSmoothing, SimpleExpSmoothing, Holt\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "from datetime import datetime                                                   # trabalho com datas\n",
+    "import pandas as pd                                                             # manipulação dados        \n",
+    "import numpy as np                                                              # calculos matematicos\n",
+    "import matplotlib.pyplot as plt                                                 # visualização grafica  \n",
+    "from statsmodels.tsa.api import ExponentialSmoothing, SimpleExpSmoothing, Holt  # algoritmos de prev\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf                   # autocorrelação\n",
+    "from statsmodels.tsa.arima.model import ARIMA                                   # modelo ARIMA\n",
     "\n",
     "# configuração de parametros do grafico\n",
     "from matplotlib.pylab import rcParams\n",
@@ -1645,13 +1645,6 @@
     "\n",
     "pd.concat([data, fut_forecast], axis=1).plot();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
