--- a/time-series-manipulation/001-manipulating-time-series.ipynb
+++ b/time-series-manipulation/001-manipulating-time-series.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,39 +364,36 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>periodo</th>\n",
        "      <th>Apelido \"Alias-as\"</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>periodo</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hora</td>\n",
+       "      <th>Hora</th>\n",
        "      <td>H</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Dia</td>\n",
+       "      <th>Dia</th>\n",
        "      <td>D</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Semana</td>\n",
+       "      <th>Semana</th>\n",
        "      <td>W</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mes</td>\n",
+       "      <th>Mes</th>\n",
        "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Quartil</td>\n",
+       "      <th>Quartil</th>\n",
        "      <td>Q</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Year</td>\n",
+       "      <th>Year</th>\n",
        "      <td>A</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -404,16 +401,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   periodo Apelido \"Alias-as\"\n",
-       "0     Hora                  H\n",
-       "1      Dia                  D\n",
-       "2   Semana                  W\n",
-       "3      Mes                  M\n",
-       "4  Quartil                  Q\n",
-       "5     Year                  A"
+       "        Apelido \"Alias-as\"\n",
+       "periodo                   \n",
+       "Hora                     H\n",
+       "Dia                      D\n",
+       "Semana                   W\n",
+       "Mes                      M\n",
+       "Quartil                  Q\n",
+       "Year                     A"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,12 +420,13 @@
     "tabela_frequencia = pd.DataFrame({'periodo': ['Hora', 'Dia', 'Semana', 'Mes', 'Quartil', 'Year'],\n",
     "                                  'Apelido \"Alias-as\"': ['H', 'D', 'W', 'M', 'Q', 'A']})\n",
     "\n",
+    "tabela_frequencia.set_index('periodo', inplace=True)\n",
     "tabela_frequencia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -451,36 +450,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>Atributos</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Atrubutos</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>.second, .minute, .hour</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>.day, .month, .quarte, .year</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>.weekday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>dayofweek</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>weekofyear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>dayofyear</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -488,17 +483,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                              0\n",
-       "0                     Atrubutos\n",
-       "1       .second, .minute, .hour\n",
-       "2  .day, .month, .quarte, .year\n",
-       "3                      .weekday\n",
-       "4                     dayofweek\n",
-       "5                    weekofyear\n",
-       "6                     dayofyear"
+       "                      Atributos\n",
+       "0       .second, .minute, .hour\n",
+       "1  .day, .month, .quarte, .year\n",
+       "2                      .weekday\n",
+       "3                     dayofweek\n",
+       "4                    weekofyear\n",
+       "5                     dayofyear"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,23 +500,15 @@
    "source": [
     "# atributos Td.timestap()\n",
     "\n",
-    "atributos_timestamp = pd.DataFrame(['Atrubutos',  \n",
-    "                                    '.second, .minute, .hour',\n",
+    "atributos_timestamp = pd.Series([   '.second, .minute, .hour',\n",
     "                                    '.day, .month, .quarte, .year', \n",
     "                                    '.weekday',\n",
-    "                                    'dayofweek', \n",
-    "                                    'weekofyear', \n",
-    "                                    'dayofyear'],)\n",
+    "                                    '.dayofweek', \n",
+    "                                    '.weekofyear', \n",
+    "                                    '.dayofyear'],)\n",
     "\n",
-    "atributos_timestamp"
+    "atributos_timestamp.to_frame('Atributos')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
