--- a/time-series-manipulation/006-manipulating-time-series.ipynb
+++ b/time-series-manipulation/006-manipulating-time-series.ipynb
@@ -54,10 +54,236 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UNRATE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1948-01-01</th>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948-02-01</th>\n",
+       "      <td>3.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948-03-01</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            UNRATE\n",
+       "DATE              \n",
+       "1948-01-01     3.4\n",
+       "1948-02-01     3.8\n",
+       "1948-03-01     4.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unrate.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# resampling periods e frequency offsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Alias</th>\n",
+       "      <th>Sample Date</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frequency</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Caledar Month End</th>\n",
+       "      <td>M</td>\n",
+       "      <td>2017-04-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Calendar Month Start</th>\n",
+       "      <td>MS</td>\n",
+       "      <td>2017-04-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Business End</th>\n",
+       "      <td>BM</td>\n",
+       "      <td>2017-04-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Business Start</th>\n",
+       "      <td>BMS</td>\n",
+       "      <td>2017-04-03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Alias Sample Date\n",
+       "Frequency                             \n",
+       "Caledar Month End        M  2017-04-30\n",
+       "Calendar Month Start    MS  2017-04-01\n",
+       "Business End            BM  2017-04-28\n",
+       "Business Start         BMS  2017-04-03"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_frequency = pd.DataFrame({'Frequency'   : ['Caledar Month End', 'Calendar Month Start', 'Business End', 'Business Start'],\n",
+    "                                'Alias'       : ['M', 'MS', 'BM', 'BMS'],\n",
+    "                                'Sample Date' : ['2017-04-30', '2017-04-01', '2017-04-28', '2017-04-03']})\n",
+    "table_frequency.set_index('Frequency', inplace=True)\n",
+    "table_frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 852 entries, 1948-01-01 to 2018-12-01\n",
+      "Freq: MS\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   UNRATE  852 non-null    float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 13.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "unrate.asfreq('MS').info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.resample.DatetimeIndexResampler object at 0x00000291FBF65970>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unrate.resample('MS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unrate.asfreq('MS').equals(unrate.resample('MS').asfreq())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# quarterly\n",
+    "gdp = pd.re"
+   ]
   }
  ],
  "metadata": {
