--- a/time-series-manipulation/008-manipulating-time-series.ipynb
+++ b/time-series-manipulation/008-manipulating-time-series.ipynb
@@ -2,10 +2,10 @@
  "cells": [],
  "metadata": {
   "interpreter": {
-   "hash": "c1c6012700f12de55f8e0fcc4d692549fb71199068374c43eaca7d87c58b71b9"
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit (system)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -19,7 +19,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
