--- a/time-series-manipulation/000-transform-data.ipynb
+++ b/time-series-manipulation/000-transform-data.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "aapl = pd.read_csv('./data/AAPL-5Y.csv', parse_dates=['Date'], index_col='Date')\n",
     "amzn = pd.read_csv('./data/AMZN-5Y.csv', parse_dates=['Date'], index_col='Date')\n",
-    "goog = pd.read_csv('./data/GOOG-5Y.csv', parse_dates=['Date'], index_col='Date')"
+    "goog = pd.read_csv('./data/GOOG-5Y.csv', parse_dates=['Date'], index_col='Date')\n",
+    "bvsp = pd.read_csv('./data/^BVSP-5Y.csv', parse_dates=['Date'], index_col='Date')"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -87,9 +88,11 @@
        "      <th>AAPL</th>\n",
        "      <th>AMZN</th>\n",
        "      <th>GOOG</th>\n",
+       "      <th>BVSP</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -101,33 +104,39 @@
        "      <td>36.153183</td>\n",
        "      <td>994.619995</td>\n",
        "      <td>964.859985</td>\n",
+       "      <td>62711.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-06-01</th>\n",
        "      <td>36.252583</td>\n",
        "      <td>995.950012</td>\n",
        "      <td>966.950012</td>\n",
+       "      <td>62289.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-06-02</th>\n",
        "      <td>36.789818</td>\n",
        "      <td>1006.729980</td>\n",
        "      <td>975.599976</td>\n",
+       "      <td>62511.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-06-05</th>\n",
        "      <td>36.430080</td>\n",
        "      <td>1011.340027</td>\n",
        "      <td>983.679993</td>\n",
+       "      <td>62450.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-06-06</th>\n",
        "      <td>36.553146</td>\n",
        "      <td>1003.000000</td>\n",
        "      <td>976.570007</td>\n",
+       "      <td>62955.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -137,55 +146,60 @@
        "      <td>143.110001</td>\n",
        "      <td>2151.139893</td>\n",
        "      <td>2233.330078</td>\n",
+       "      <td>110346.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-05-24</th>\n",
        "      <td>140.360001</td>\n",
        "      <td>2082.000000</td>\n",
        "      <td>2118.520020</td>\n",
+       "      <td>110581.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-05-25</th>\n",
        "      <td>140.520004</td>\n",
        "      <td>2135.500000</td>\n",
        "      <td>2116.790039</td>\n",
+       "      <td>110580.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-05-26</th>\n",
        "      <td>143.779999</td>\n",
        "      <td>2221.550049</td>\n",
        "      <td>2165.919922</td>\n",
+       "      <td>111890.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-05-27</th>\n",
        "      <td>149.639999</td>\n",
        "      <td>2302.929932</td>\n",
        "      <td>2255.979980</td>\n",
+       "      <td>111942.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1259 rows × 3 columns</p>\n",
+       "<p>1259 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  AAPL         AMZN         GOOG\n",
-       "Date                                            \n",
-       "2017-05-31   36.153183   994.619995   964.859985\n",
-       "2017-06-01   36.252583   995.950012   966.950012\n",
-       "2017-06-02   36.789818  1006.729980   975.599976\n",
-       "2017-06-05   36.430080  1011.340027   983.679993\n",
-       "2017-06-06   36.553146  1003.000000   976.570007\n",
-       "...                ...          ...          ...\n",
-       "2022-05-23  143.110001  2151.139893  2233.330078\n",
-       "2022-05-24  140.360001  2082.000000  2118.520020\n",
-       "2022-05-25  140.520004  2135.500000  2116.790039\n",
-       "2022-05-26  143.779999  2221.550049  2165.919922\n",
-       "2022-05-27  149.639999  2302.929932  2255.979980\n",
+       "                  AAPL         AMZN         GOOG      BVSP\n",
+       "Date                                                      \n",
+       "2017-05-31   36.153183   994.619995   964.859985   62711.0\n",
+       "2017-06-01   36.252583   995.950012   966.950012   62289.0\n",
+       "2017-06-02   36.789818  1006.729980   975.599976   62511.0\n",
+       "2017-06-05   36.430080  1011.340027   983.679993   62450.0\n",
+       "2017-06-06   36.553146  1003.000000   976.570007   62955.0\n",
+       "...                ...          ...          ...       ...\n",
+       "2022-05-23  143.110001  2151.139893  2233.330078  110346.0\n",
+       "2022-05-24  140.360001  2082.000000  2118.520020  110581.0\n",
+       "2022-05-25  140.520004  2135.500000  2116.790039  110580.0\n",
+       "2022-05-26  143.779999  2221.550049  2165.919922  111890.0\n",
+       "2022-05-27  149.639999  2302.929932  2255.979980  111942.0\n",
        "\n",
-       "[1259 rows x 3 columns]"
+       "[1259 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,6 +209,7 @@
     "stocks_price.drop(['Open', 'High', 'Low', 'Close', 'Volume'], axis=1, inplace=True)\n",
     "stocks_price['AMZN'] = amzn['Adj Close']\n",
     "stocks_price['GOOG'] = goog['Adj Close']\n",
+    "stocks_price['BVSP'] = bvsp['Adj Close']\n",
     "stocks_price.rename({'Adj Close':'AAPL'}, axis=1, inplace=True)\n",
     "stocks_price"
    ]
