--- a/time-series-manipulation/002-manipulating-time-series.ipynb
+++ b/time-series-manipulation/002-manipulating-time-series.ipynb
@@ -839,24 +839,9 @@
    ],
    "source": [
     "# filtro de valores nulos após seleção dos dias uteis\n",
+    "# dias uteis que não tiveram trade\n",
     "google[google.Close.isnull()]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dias uteis que não tiveram trade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
