--- a/time-series-analysis/01-pré-processamento-visualização.ipynb
+++ b/time-series-analysis/01-pré-processamento-visualização.ipynb
@@ -2301,11 +2301,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.5 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -2319,9 +2316,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "74af3d2f25f1e46ebd2903d59225d79e4675ec224d56c01fc30cd168c2010d53"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
